fix: Can now login

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Packing Slip Generator</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link href="css/style.css" rel="stylesheet">
-    
+
     <script src="bower_components/jquery-2.1.4.min/jquery-2.1.4.min.js"></script>
 
     <!-- Angular -->
@@ -28,7 +28,7 @@
       <div class="login-card">
         <h2>Log-in</h2><br>
         <form>
-          <input type="text" name="user" placeholder="Username" ng-model="app.userName">
+          <input type="text" name="user" placeholder="Email" ng-model="userName">
           <input type="password" name="pass" placeholder="Password" ng-model="app.password">
           <input type="submit" name="login" class="login login-submit" value="login" ng-click="app.login()">
         </form>
